# quant

./: .env.example  .gitignore  .mcp.json  AGENT_DIRECTIVE.md  CLAUDE.md  CODEBASE_MASTER.md  COMBAT_VETOES_FINDING.md  DEFINITION_OF_DONE.md  DEPLOYMENT_STATUS.md  Dynamic RR Engine MOC.md  FIRM.md  Fractal Corridors  GOALS.md  ICT Swing Trade Decision Engine.md  I_am_a_good_trader.md  I_was_a_good_trader.md  Intelligence System MOC.md  MONDAY_PROTOCOL.md  NEXT.md  OPEN_ITEMS.md  ORACLE_INFRASTRUCTURE_EXPLORATION.md  PROJECT_STATUS.md  README.md  RESULTS_REPORT_2026-07-21.md  RISK_CONSTITUTION.md  RISK_FRAMEWORK.md  RISK_RESEARCH.md  Reality Bridge MOC.md  Reality_Bridge_MOC.md  SECURITY.md  SYSTEM_INVENTORY.md  SYSTEM_STATUS.md  Swing_Trading_Complete_Reference.docx  TEMPLATE_B_MINIMUM_VIABLE_INCOME.md  TRADING_PHILOSOPHY.md  VISION.md  __init__.py  ai_trading_bridge.py  apply_fixes.py  check_account.py  (+52 more)
.claude/: config.json  mcp.json  settings.json
alta_platform/: __init__.py  health_client.py  measurement.py  regime_client.py
archive/: README.md
attic/: JGBT_COMPLETE_100_PERCENT.md  PHASE_13_COMPLETE.md  execute_monday_killzone.py  realtime_publisher.py  run_engine.py  run_engine_live.py  run_engine_production.py  run_kimi.py  setup_task_scheduler.py  test_feature_match.py  test_key_debug.py  test_kimi_brute.py  test_kimi_k2.py  test_training.py  verify_data_flow.py
audit/: CORRECTNESS_LAYERS.md  __init__.py  claim_check.py  claims_spec.md  divergence_spec.md  health_diagnosis_2026-07.md  invariant_guard.py  invariants_spec.md  shadow_divergence.py  system_inventory.py
backtest/: __init__.py  backtest_runner.py  execution_simulator.py  fast_engine.py  report_generator.py  sweep.py  walk_forward.py
backtester/: README.md  __init__.py  _gapper_events.py  audit.py  daily_engine.py  data.py  engine.py  holdout_guard.py  hyp104_holdout.py  hyp105_long_scan.py  hyp106_skew.py  luld.py  mc.py  megascan.py  megascan_v2.py  realistic_fills.py  run_corrected_gapper.py  scanner.py  walk_forward.py
clawd_trading/: .env.example  .gitignore  ARCHITECTURE_SUMMARY.md  DEPLOYMENT.md  Dockerfile  Procfile  README.md  __init__.py  dashboard.html  main.py  package.json  railway.toml  requirements.txt
config/: autonomous.yml  es_nq_params.yml  execution_constraints_v2_2.yaml  futures_params.yml  gate_params.yml  ict_params.yml  loader.py  mt5.yml  parameters.yml  research_universe.txt  risk_constitution.yaml  settings.py  swing_params.json  training.yml  universe.py
contracts/: types.py
dashboard/: index.html  prop_sim.html
data/: __init__.py  _dip_fetch_checkpoint.json  _dip_pipeline_phase1_checkpoint.json  _dip_pipeline_phase2_checkpoint.json  alpaca_client.py  backtester_audit_log.jsonl  breadth_engine.py  calendar_fetcher.py  calendar_snapshot.json  cross_system_state.json  daily_fetcher.py  forex_factory_scraper.py  icarus_status.json  index_fetcher.py  order_flow_fetcher.py  petroulas_log.json  pipeline.py  polygon_client.py  providers.py  router_labels_v5.csv  schema.py  sentiment.db.wal  sentiment_engine.py  tradelocker_client.py  validator.py
docs/: ARCHITECTURE.md  COMPONENT_CLASSIFICATION.md  DATA_FLOW.md  MEASUREMENT_METHODOLOGY.md  PHASE_AUDIT_0B_8.md  REWIRING.md  XGBOOST_VS_KIMI.md  intraday_fx_acquisition.md  learning_loop_prerequisites.md  obsidian_graph.md  proposed_amendment_art7-9.md  sentiment_data_dictionary.md  vrp_activation.md
entry_engine/: entry_engine.py  ict_decision_tree.py
examples/: generate_sample_signal.py
execution/: alpaca.py  bias.py  borrow.py  build_backfill_events.py  config.py  context.py  drift.py  eod.py  funderpro_executor.py  halts.py  harness.py  obsidian.py  paper_trading.py  postmortem.py  quotes.py  risk.py  rr_engine.py  scan.py  signals.py
experience/: ATTRIBUTION_RUBRIC.md  __init__.py  attribution.py  backfill.py  citations.py  journal.py  journal_sync.py  library_annex.py  library_ingest.py  precedent_service.py  precedents.py  weekly_review.py
(+2433 files in other folders)
