[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "clawd-trading"
version = "1.0.0"
description = "Three-Layer Algorithmic Trading System"
requires-python = ">=3.11"
readme = "README.md"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "scripts*", "docs*"]

[tool.black]
line-length = 127
target-version = ["py311"]
skip-string-normalization = false

[tool.ruff]
line-length = 127
target-version = "py311"
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
explicit_package_bases = true
warn_unused_ignores = false
no_implicit_optional = false
disable_error_code = ["var-annotated"]
exclude = [
    "scripts/legacy/.*",
    "tests/debug/.*",
    "examples/.*",
    "verify_data_flow\\.py",
    "simple_publisher\\.py",
    "clawd_trading/swing_prediction/TODO_COMPLETE_IMPLEMENTATION\\.py",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--tb=short", "--strict-markers", "--ignore=tests/debug"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests",
]
